[project]
name = "trio-websocket"
version = "0.12.0-dev" 
description = "WebSocket library for Trio"
readme = {file="README.md", content-type="text/markdown"}
requires-python = ">=3.8"
keywords = ["websocket", "client", "server", "trio"]
license = {text = "MIT License"}
authors = [
    {name = "Mark E. Haase", email = "mehaase@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
"trio>=0.11", 
"exceptiongroup<3.11",
"wsproto@git+https://github.com/python-hyper/wsproto.git"
]

[project.urls]
"Bug Reports" = "https://github.com/python-trio/trio-websocket/issues"
"Source" = "https://github.com/python-trio/trio-websocket"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docs", "examples", "tests"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
trio-websocket = { path = ".", editable = true }

[tool.pixi.tasks]
